bug: Align matching and background color

--- a/css/styles.css
+++ b/css/styles.css
@@ -84,7 +84,7 @@ span {
 }
 
 .matched {
-    border-color: green !important;
+    border-color: #187818 !important;
     pointer-events: none;
 }
 
